nav shadow and z-index fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -259,7 +259,7 @@ body {
   color: white;
   margin: 5em 0 0 2em;
   height: 100vh;
-  z-index: -1;
+  // z-index: -1;
 
   .recent {
     width: 100%;
@@ -273,7 +273,7 @@ body {
       width: 100%;
       height: 100%;
       margin: 2em 0 0 0;
-      z-index: -1;
+      // z-index: -1;
 
       .post {
         background-image: url('/img/cover-bg.png');
@@ -288,7 +288,7 @@ body {
         justify-content: space-around;
         text-align: center;
         position: relative;
-        z-index: 0;
+        // z-index: 0;
         transition: 300ms;
 
         &:nth-child(2) {
@@ -307,7 +307,7 @@ body {
           top: -1em;
           left: 0;
           transition: 300ms;
-          z-index: 0;
+          // z-index: 0;
         }
 
         // Hover Effect
@@ -674,11 +674,15 @@ body {
   .navbar-desktop {
     display: flex;
     width: 100%;
+    z-index: 10;
     padding: 3em;
     align-items: center;
     justify-content: space-around;
     color: white;
     position: fixed;
+    -webkit-box-shadow: inset 0px 50px 2000px 5px rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0px 50px 50px 5px rgba(0, 0, 0, 0.5);
+
 
     .logo {
       color: white;
